--- a/mywebsite/styles/styles.css
+++ b/mywebsite/styles/styles.css
@@ -2,31 +2,29 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a {
   color: #0070f3;
   text-decoration: none;
+}
 
-  &:hover {
-      text-decoration: underline;
-  }
+a:hover {
+  text-decoration: underline;
 }
 
 img {
   max-width: 100%;
   display: block;
 }
-
-// LAYOUT
 
 body {
   color: #777;
@@ -39,7 +37,6 @@ body {
 
 * {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -78,14 +75,12 @@ label {
 
 .l-box-lrg {
   padding: 2em;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .is-center {
   text-align: center;
 }
-
-
 
 /*
 * -- PURE FORM STYLES --
@@ -99,7 +94,8 @@ label {
 
 .pure-form input[type] {
   border: 2px solid #ddd;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   font-size: 100%;
   width: 100%;
   margin-bottom: 1em;
@@ -123,20 +119,21 @@ a.pure-button-primary {
   font-size: 120%;
 }
 
-
 /*
 * -- MENU STYLES --
 * I want to customize how my .pure-menu looks at the top of the page
 */
-
 .home-menu {
   padding: 0.5em;
   text-align: center;
-  box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
+
 .home-menu {
   background: #2d3e50;
 }
+
 .pure-menu.pure-menu-fixed {
   /* Fixed menus normally have a border at the bottom. */
   border-bottom: none;
@@ -157,6 +154,7 @@ a.pure-button-primary {
 .home-menu a {
   color: #6FBEF3;
 }
+
 .home-menu li a:hover,
 .home-menu li a:focus {
   background: none;
@@ -164,12 +162,10 @@ a.pure-button-primary {
   color: #AECFE5;
 }
 
-
 /*
 * -- SPLASH STYLES --
 * This is the blue top section that appears on the page.
 */
-
 .splash-container {
   background: #1f8dd6;
   z-index: 1;
@@ -188,7 +184,10 @@ a.pure-button-primary {
   height: 50%;
   margin: auto;
   position: absolute;
-  top: 100px; left: 0; bottom: 0; right: 0;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  right: 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -224,7 +223,6 @@ a.pure-button-primary {
   min-height: 12%;
   z-index: 2;
   background: white;
-
 }
 
 /* We want to give the content area some more padding */
@@ -249,9 +247,10 @@ a.pure-button-primary {
 .content-subhead {
   color: #1f8dd6;
 }
-  .content-subhead i {
-      margin-right: 7px;
-  }
+
+.content-subhead i {
+  margin-right: 7px;
+}
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
@@ -273,43 +272,35 @@ a.pure-button-primary {
 * of the mobile styles.
 */
 @media (min-width: 48em) {
-
   /* We increase the body font size */
   body {
-      font-size: 16px;
+    font-size: 16px;
   }
-
   /* We can align the menu header to the left, but float the
   menu items to the right. */
   .home-menu {
-      text-align: left;
+    text-align: left;
   }
-      .home-menu ul {
-          float: right;
-      }
-
+  .home-menu ul {
+    float: right;
+  }
   /* We increase the height of the splash-container */
-/*    .splash-container {
+  /*    .splash-container {
       height: 500px;
   }*/
-
   /* We decrease the width of the .splash, since we have more width
   to work with */
   .splash {
-      width: 50%;
-      height: 50%;
+    width: 50%;
+    height: 50%;
   }
-
   .splash-head {
-      font-size: 250%;
+    font-size: 250%;
   }
-
-
   /* We remove the border-separator assigned to .l-box-lrg */
   .l-box-lrg {
-      border: none;
+    border: none;
   }
-
 }
 
 /*
@@ -320,39 +311,35 @@ a.pure-button-primary {
 @media (min-width: 78em) {
   /* We increase the header font size even more */
   .splash-head {
-      font-size: 300%;
+    font-size: 300%;
   }
 }
 
+.heading2Xl {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
 
-// UTILS
-.heading {
-  &2Xl {
-    font-size: 2.5rem;
-    line-height: 1.2;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-  }
-  &Xl {
-    font-size: 2rem;
-    line-height: 1.3;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
+.headingXl {
+  font-size: 2rem;
+  line-height: 1.3;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
 
-  }
-  &Lg {
-    font-size: 1.5rem;
-    line-height: 1.4;
-    margin: 1rem 0;
+.headingLg {
+  font-size: 1.5rem;
+  line-height: 1.4;
+  margin: 1rem 0;
+}
 
-  }
-  &Md {
-    font-size: 1.2rem;
-    line-height: 1.5;
-
-  }
+.headingMd {
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
 
 .borderCircle {
@@ -371,11 +358,13 @@ a.pure-button-primary {
   list-style: none;
   padding: 0;
   margin: 0;
-
-  &Item {
-    margin: 0 0 1.25rem;
-  }
-  &Text {
-    color: #666;
-  }
 }
+
+.listItem {
+  margin: 0 0 1.25rem;
+}
+
+.listText {
+  color: #666;
+}
+/*# sourceMappingURL=styles.css.map */
