--- a/mywebsite/styles/styles.css
+++ b/mywebsite/styles/styles.css
@@ -367,4 +367,151 @@ a.pure-button-primary {
 .listText {
   color: #666;
 }
+
+@-webkit-keyframes color-change-5x {
+  0% {
+    background: #7C83FD;
+    background-position: 50% 0%;
+  }
+  25% {
+    background: #96BAFF;
+  }
+  50% {
+    background: #7DEDFF;
+  }
+  75% {
+    background: #88FFF7;
+  }
+  100% {
+    background: #E4F9F5;
+    background-position: 50% 100%;
+  }
+}
+
+@keyframes color-change-5x {
+  0% {
+    background: #7C83FD;
+    background-position: 50% 0%;
+  }
+  25% {
+    background: #96BAFF;
+  }
+  50% {
+    background: #7DEDFF;
+  }
+  75% {
+    background: #88FFF7;
+  }
+  100% {
+    background: #E4F9F5;
+    background-position: 50% 100%;
+  }
+}
+
+@-webkit-keyframes change {
+  0% {
+    content: "ipsum";
+  }
+  10% {
+    content: "dolor";
+  }
+  20% {
+    content: "sit";
+  }
+  30% {
+    content: "amet";
+  }
+  40% {
+    content: "consectetur";
+  }
+  50% {
+    content: "adipisicing";
+  }
+  60% {
+    content: "elit";
+  }
+  70% {
+    content: "Hic";
+  }
+  80% {
+    content: "atque";
+  }
+  90% {
+    content: "fuga";
+  }
+}
+
+@keyframes change {
+  0% {
+    content: "ipsum";
+  }
+  10% {
+    content: "dolor";
+  }
+  20% {
+    content: "sit";
+  }
+  30% {
+    content: "amet";
+  }
+  40% {
+    content: "consectetur";
+  }
+  50% {
+    content: "adipisicing";
+  }
+  60% {
+    content: "elit";
+  }
+  70% {
+    content: "Hic";
+  }
+  80% {
+    content: "atque";
+  }
+  90% {
+    content: "fuga";
+  }
+}
+
+.section-1, .section-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  padding: 2rem;
+  color: #40514E;
+  -webkit-animation: color-change-5x 20s linear infinite alternate both;
+          animation: color-change-5x 20s linear infinite alternate both;
+}
+
+.section-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  padding: 2rem;
+  color: #40514E;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23341659' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%2346367a' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%2358559b' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%236b76bd' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%238097de' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%2396baff' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#changing:after {
+  content: "";
+  -webkit-animation: change 30s linear infinite;
+          animation: change 30s linear infinite;
+}
 /*# sourceMappingURL=styles.css.map */
