--- a/mywebsite/styles/_mixins.scss
+++ b/mywebsite/styles/_mixins.scss
@@ -4,5 +4,7 @@
     justify-content: center;
     height: 100vh;
     padding: 2rem;
-    color: #40514E;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(black, 1);
+    font-size: 1.75rem;
 }
