--- a/mywebsite/styles/_animations.scss
+++ b/mywebsite/styles/_animations.scss
@@ -22,14 +22,15 @@
 // WORD-ANIMATION
 
 @keyframes change {
-  0% { content:"ipsum"; }
-  10% { content:"dolor"; }
-  20% { content:"sit"; }
-  30% { content:"amet"; }
-  40% { content:"consectetur"; }
-  50% { content: "adipisicing"; }
-  60% { content: "elit"; }
-  70% { content: "Hic"; }
-  80% { content: "atque"; }
-  90% { content: "fuga"; }
+  0% { content:"stay"; }
+  10% { content:"inspire"; }
+  20% { content:"admire"; }
+  30% { content:"enjoy"; }
+  40% { content:"help"; }
+  50% { content: "laugh"; }
+  60% { content: "learn"; }
+  70% { content: "teach"; }
+  80% { content: "build"; }
+  90% { content: "dream"; }
+  100% { content: "explore"; }
 }
