--- a/mywebsite/styles/_animations.scss
+++ b/mywebsite/styles/_animations.scss
@@ -1,36 +1,272 @@
 // BACKGROUND
 @keyframes color-change-5x {
   0% {
-    background: #7C83FD;
+    background: #440A67;
     background-position: 50% 0%;
   }
-  25% {
-    background: #96BAFF;
-  }
   50% {
-    background: #7DEDFF;
-  }
-  75% {
-    background: #88FFF7;
+    background: #11999E;
   }
   100% {
-    background: #E4F9F5;
+    background: #440A67;
     background-position: 50% 100%;
   }
 }
 
-// WORD-ANIMATION
+@keyframes bg-pan-bottom {
+  0% {
+    background-color: #440A67;
+    background-position: 50% 0%;
+  }
+  100% {
+    background-color: #41AEA9;
+    background-position: 50% 100%;
+  }
+}
 
-@keyframes change {
-  0% { content:"stay"; }
-  10% { content:"inspire"; }
-  20% { content:"admire"; }
-  30% { content:"enjoy"; }
-  40% { content:"help"; }
-  50% { content: "laugh"; }
-  60% { content: "learn"; }
-  70% { content: "teach"; }
-  80% { content: "build"; }
-  90% { content: "dream"; }
-  100% { content: "explore"; }
+@keyframes blink {
+  85% {
+    transform: rotateX(0deg);
+  }
+  90% {
+    transform: rotateX(90deg);
+  }
+}
+
+// SWITCH
+@-webkit-keyframes rotateElement {
+  0% {
+    left: 0;
+  }
+
+  25% {
+    left: 4rem;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+    left: -4rem;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    left: 1rem;
+    opacity: 1;
+  }
+}
+
+
+@keyframes rotateElement {
+  0% {
+    left: 0;
+  }
+
+  25% {
+    left: 4rem;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+    left: -4rem;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    left: 1rem;
+    opacity: 1;
+  }
+}
+
+
+@-webkit-keyframes changeFace {
+  100% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    background: #8e8e8e;
+    border: none;
+    border-radius: 100%;
+  }
+}
+
+
+@keyframes changeFace {
+  100% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    background: #8e8e8e;
+    border: none;
+    border-radius: 100%;
+  }
+}
+
+
+@-webkit-keyframes changeMouth {
+  100% {
+    top: 2.55rem;
+    left: 1.125rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+}
+
+
+@keyframes changeMouth {
+  100% {
+    top: 2.55rem;
+    left: 1.125rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+}
+
+
+@-webkit-keyframes rotateElementReverse {
+  0% {
+    left: 0;
+  }
+
+  25% {
+    left: -4rem;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+    left: 4rem;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+
+@keyframes rotateElementReverse {
+  0% {
+    left: 0;
+  }
+
+  25% {
+    left: -4rem;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+    left: 4rem;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+
+@-webkit-keyframes changeFaceReverse {
+  0% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    border: none;
+    border-radius: 100%;
+    background: #8e8e8e;
+  }
+}
+
+
+@keyframes changeFaceReverse {
+  0% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    border: none;
+    border-radius: 100%;
+    background: #8e8e8e;
+  }
+}
+
+
+@-webkit-keyframes changeMouthReverse {
+  0% {
+    top: 2.55rem;
+    left: 0.9rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border: none;
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+
+  25% {
+    left: 1.125rem;
+  }
+}
+
+
+@keyframes changeMouthReverse {
+  0% {
+    top: 2.55rem;
+    left: 0.9rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border: none;
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+
+  25% {
+    left: 1.125rem;
+  }
 }
