--- a/mywebsite/styles/_variables.scss
+++ b/mywebsite/styles/_variables.scss
@@ -1,3 +1,9 @@
 $slider-width: 12.25rem;
 $slider-height: 5.5rem;
+$primary: #440A67;
+$secondary: #ffffff;
 
+
+$dim-text: #DBE2EF;
+
+$highlights: #FCBAD3;
