--- a/mywebsite/styles/_layout.scss
+++ b/mywebsite/styles/_layout.scss
@@ -1,3 +1,13 @@
+// Navbar
+.navbar {
+  background-color: $primary;
+  
+  &--item {
+    color: $dim-text;
+    position: relative;
+  }
+}
+
 // HOME
 
 
@@ -11,7 +21,6 @@
         background-color: #000000;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%23211631' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%2339235f' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%23533191' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%236e3fc7' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%23894dff' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
         background-attachment: fixed;
-        background-size: cover;
 
         &-text {
             color: white
@@ -22,6 +31,12 @@
         @include changing_color_background();
         font-size: 1.3rem;
         height: 100vh;
+        color: $dim-text; 
+
+        em {
+          color: white;
+          font-weight: 800;
+        }
 
         &-slider {
           -webkit-box-sizing: border-box;
@@ -54,6 +69,12 @@
         }
 
     }
+}
+
+// projects
+
+.projects {
+  @include changing_color_background();
 }
 
 // word animation
@@ -129,6 +150,7 @@
       transform: translateY(nth($steps, length($steps)));
     }
   }
+
 
 // SLIDER
 
@@ -289,83 +311,4 @@
       animation: changeMouthReverse forwards 0.3s;
     }
   }
-}
-
-// BUTTONS
-.button {
-  
-  --offset: 10px;
-  --border-size: 2px;
-  
-  display: block;
-  position: relative;
-  padding: 1.5em 3em;
-  appearance: none;
-  border: 0;
-  background: transparent;
-  color: #e55743;
-  text-transform: uppercase;
-  letter-spacing: .25em;
-  outline: none;
-  cursor: pointer;
-  font-weight: bold;
-  border-radius: 0;
-  box-shadow: inset 0 0 0 var(--border-size) currentcolor;
-  transition: background .8s ease;
-  
-  &:hover {
-    background: rgba(100, 0, 0, .03);
-  }
-  
-  &__horizontal,
-  &__vertical {
-    position: absolute;
-    top: var(--horizontal-offset, 0);
-    right: var(--vertical-offset, 0);
-    bottom: var(--horizontal-offset, 0);
-    left: var(--vertical-offset, 0);
-    transition: transform .8s ease;
-    will-change: transform;
-    
-    &::before {
-      content: '';
-      position: absolute;
-      border: inherit;
-    }
-  }
-  
-  &__horizontal {
-    --vertical-offset: calc(var(--offset) * -1);
-    border-top: var(--border-size) solid currentcolor;
-    border-bottom: var(--border-size) solid currentcolor;
-    
-    &::before {
-      top: calc(var(--vertical-offset) - var(--border-size));
-      bottom: calc(var(--vertical-offset) - var(--border-size));
-      left: calc(var(--vertical-offset) * -1);
-      right: calc(var(--vertical-offset) * -1);
-    }
-  }
-  
-  &:hover &__horizontal {
-    transform: scaleX(0);
-  }
-  
-  &__vertical {
-    --horizontal-offset: calc(var(--offset) * -1);
-    border-left: var(--border-size) solid currentcolor;
-    border-right: var(--border-size) solid currentcolor;
-    
-    &::before {
-      top: calc(var(--horizontal-offset) * -1);
-      bottom: calc(var(--horizontal-offset) * -1);
-      left: calc(var(--horizontal-offset) - var(--border-size));
-      right: calc(var(--horizontal-offset) - var(--border-size));
-    }
-  }
-  
-  &:hover &__vertical {
-    transform: scaleY(0);
-  }
-  
 }
