--- a/mywebsite/styles/_mixins.scss
+++ b/mywebsite/styles/_mixins.scss
@@ -13,3 +13,16 @@
     @include layout();
     animation: color-change-5x 15s infinite;
 }
+
+@mixin custom-blob() {
+    background-color: white;
+    transition: all .2s ease-in-out;
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+@mixin custom-blob-hover($width, $height) {
+    width: $width;
+    height: $height;
+    margin-top: 0;
+}
