--- a/mywebsite/styles/styles.css
+++ b/mywebsite/styles/styles.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 * {
@@ -40,400 +41,17 @@ body {
   box-sizing: border-box;
 }
 
-/*
-* -- BASE STYLES --
-* Most of these are inherited from Base, but I want to change a few.
-*/
-body {
-  line-height: 1.7em;
-  color: #7f8c8d;
-  font-size: 13px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label {
-  color: #34495e;
-}
-
-.pure-img-responsive {
-  max-width: 100%;
-  height: auto;
-}
-
-/*
-* -- LAYOUT STYLES --
-* These are some useful classes which I will need
-*/
-.l-box {
-  padding: 1em;
-}
-
-.l-box-lrg {
-  padding: 2em;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.is-center {
-  text-align: center;
-}
-
-/*
-* -- PURE FORM STYLES --
-* Style the form inputs and labels
-*/
-.pure-form label {
-  margin: 1em 0 0;
-  font-weight: bold;
-  font-size: 100%;
-}
-
-.pure-form input[type] {
-  border: 2px solid #ddd;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  font-size: 100%;
-  width: 100%;
-  margin-bottom: 1em;
-}
-
-/*
-* -- PURE BUTTON STYLES --
-* I want my pure-button elements to look a little different
-*/
-.pure-button {
-  background-color: #1f8dd6;
+.emphasise {
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
   color: white;
-  padding: 0.5em 2em;
-  border-radius: 5px;
+  display: inline;
 }
 
-a.pure-button-primary {
-  background: white;
-  color: #1f8dd6;
-  border-radius: 5px;
-  font-size: 120%;
-}
-
-/*
-* -- MENU STYLES --
-* I want to customize how my .pure-menu looks at the top of the page
-*/
-.home-menu {
-  padding: 0.5em;
-  text-align: center;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-}
-
-.home-menu {
-  background: #2d3e50;
-}
-
-.pure-menu.pure-menu-fixed {
-  /* Fixed menus normally have a border at the bottom. */
-  border-bottom: none;
-  /* I need a higher z-index here because of the scroll-over effect. */
-  z-index: 4;
-}
-
-.home-menu .pure-menu-heading {
-  color: white;
-  font-weight: 400;
-  font-size: 120%;
-}
-
-.home-menu .pure-menu-selected a {
-  color: white;
-}
-
-.home-menu a {
-  color: #6FBEF3;
-}
-
-.home-menu li a:hover,
-.home-menu li a:focus {
-  background: none;
-  border: none;
-  color: #AECFE5;
-}
-
-/*
-* -- SPLASH STYLES --
-* This is the blue top section that appears on the page.
-*/
-.splash-container {
-  background: #1f8dd6;
-  z-index: 1;
-  overflow: hidden;
-  /* The following styles are required for the "scroll-over" effect */
-  width: 100%;
-  height: 88%;
-  top: 0;
-  left: 0;
-  position: fixed !important;
-}
-
-.splash {
-  /* absolute center .splash within .splash-container */
-  width: 80%;
-  height: 50%;
-  margin: auto;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-/* This is the main heading that appears on the blue section */
-.splash-head {
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  border: 3px solid white;
-  padding: 1em 1.6em;
-  font-weight: 100;
-  border-radius: 5px;
-  line-height: 1em;
-}
-
-/* This is the subheading that appears on the blue section */
-.splash-subhead {
-  color: white;
-  letter-spacing: 0.05em;
-  opacity: 0.8;
-}
-
-/*
-* -- CONTENT STYLES --
-* This represents the content area (everything below the blue section)
-*/
-.content-wrapper {
-  /* These styles are required for the "scroll-over" effect */
-  position: absolute;
-  top: 87%;
-  width: 100%;
-  min-height: 12%;
-  z-index: 2;
-  background: white;
-}
-
-/* We want to give the content area some more padding */
-.content {
-  padding: 1em 1em 3em;
-}
-
-/* This is the class used for the main content headers (<h2>) */
-.content-head {
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  margin: 2em 0 1em;
-}
-
-/* This is a modifier class used when the content-head is inside a ribbon */
-.content-head-ribbon {
-  color: white;
-}
-
-/* This is the class used for the content sub-headers (<h3>) */
-.content-subhead {
-  color: #1f8dd6;
-}
-
-.content-subhead i {
-  margin-right: 7px;
-}
-
-/* This is the class used for the dark-background areas. */
-.ribbon {
-  background: #2d3e50;
-  color: #aaa;
-}
-
-/* This is the class used for the footer */
-.footer {
-  background: #111;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/*
-* -- TABLET (AND UP) MEDIA QUERIES --
-* On tablets and other medium-sized devices, we want to customize some
-* of the mobile styles.
-*/
-@media (min-width: 48em) {
-  /* We increase the body font size */
-  body {
-    font-size: 16px;
-  }
-  /* We can align the menu header to the left, but float the
-  menu items to the right. */
-  .home-menu {
-    text-align: left;
-  }
-  .home-menu ul {
-    float: right;
-  }
-  /* We increase the height of the splash-container */
-  /*    .splash-container {
-      height: 500px;
-  }*/
-  /* We decrease the width of the .splash, since we have more width
-  to work with */
-  .splash {
-    width: 50%;
-    height: 50%;
-  }
-  .splash-head {
-    font-size: 250%;
-  }
-  /* We remove the border-separator assigned to .l-box-lrg */
-  .l-box-lrg {
-    border: none;
-  }
-}
-
-/*
-* -- DESKTOP (AND UP) MEDIA QUERIES --
-* On desktops and other large devices, we want to over-ride some
-* of the mobile and tablet styles.
-*/
-@media (min-width: 78em) {
-  /* We increase the header font size even more */
-  .splash-head {
-    font-size: 300%;
-  }
-}
-
-.heading2Xl {
-  font-size: 2.5rem;
-  line-height: 1.2;
-  font-weight: 800;
-  letter-spacing: -0.05rem;
-  margin: 1rem 0;
-}
-
-.headingXl {
-  font-size: 2rem;
-  line-height: 1.3;
-  font-weight: 800;
-  letter-spacing: -0.05rem;
-  margin: 1rem 0;
-}
-
-.headingLg {
-  font-size: 1.5rem;
-  line-height: 1.4;
-  margin: 1rem 0;
-}
-
-.headingMd {
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
-
-.borderCircle {
-  border-radius: 9999px;
-}
-
-.colorInherit {
-  color: inherit;
-}
-
-.padding1px {
-  padding-top: 1px;
-}
-
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.listItem {
-  margin: 0 0 1.25rem;
-}
-
-.listText {
-  color: #666;
-}
-
-.draw-border {
-  -webkit-box-shadow: inset 0 0 0 4px #58afd1;
-          box-shadow: inset 0 0 0 4px #58afd1;
-  color: #58afd1;
-  -webkit-transition: color 0.25s 0.08333s;
-  transition: color 0.25s 0.08333s;
-  position: relative;
-}
-
-.draw-border::before, .draw-border::after {
-  border: 0 solid transparent;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  content: '';
-  pointer-events: none;
-  position: absolute;
-  width: 0;
-  height: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.draw-border::before {
-  border-bottom-width: 4px;
-  border-left-width: 4px;
-}
-
-.draw-border::after {
-  border-top-width: 4px;
-  border-right-width: 4px;
-}
-
-.draw-border:hover {
-  color: #ffe593;
-}
-
-.draw-border:hover::before, .draw-border:hover::after {
-  border-color: #ffe593;
-  -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
-  transition: border-color 0s, width 0.25s, height 0.25s;
-  width: 100%;
-  height: 100%;
-}
-
-.draw-border:hover::before {
-  -webkit-transition-delay: 0s, 0s, 0.25s;
-          transition-delay: 0s, 0s, 0.25s;
-}
-
-.draw-border:hover::after {
-  -webkit-transition-delay: 0s, 0.25s, 0s;
-          transition-delay: 0s, 0.25s, 0s;
-}
-
-.btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  line-height: 1.5;
-  font: 700 1.2rem 'Roboto Slab', sans-serif;
-  padding: 1em 2em;
-  letter-spacing: 0.05rem;
-}
-
-.btn:focus {
-  outline: 2px dotted #55d7dc;
+.emphasise:hover {
+  color: #F08FC0;
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
 }
 
 @-webkit-keyframes color-change-5x {
@@ -704,6 +322,15 @@ a.pure-button-primary {
   }
 }
 
+.navbar {
+  background-color: #440A67;
+}
+
+.navbar--item {
+  color: #DBE2EF;
+  position: relative;
+}
+
 .section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -741,7 +368,6 @@ a.pure-button-primary {
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%23211631' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%2339235f' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%23533191' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%236e3fc7' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%23894dff' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
-  background-size: cover;
 }
 
 .section-2-text {
@@ -767,6 +393,12 @@ a.pure-button-primary {
           animation: color-change-5x 15s infinite;
   font-size: 1.3rem;
   height: 100vh;
+  color: #DBE2EF;
+}
+
+.section-3 em {
+  color: white;
+  font-weight: 800;
 }
 
 .section-3-slider {
@@ -799,6 +431,25 @@ a.pure-button-primary {
 .section-3-slider::before, .section-3-slider::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  padding: 2rem;
+  color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  font-size: 1.75rem;
+  -webkit-animation: color-change-5x 15s infinite;
+          animation: color-change-5x 15s infinite;
 }
 
 .ms-header {
@@ -1032,88 +683,5 @@ a.pure-button-primary {
 [type="checkbox"] + .check-label .face .mouth {
   -webkit-animation: changeMouthReverse forwards 0.3s;
   animation: changeMouthReverse forwards 0.3s;
-}
-
-.button {
-  --offset: 10px;
-  --border-size: 2px;
-  display: block;
-  position: relative;
-  padding: 1.5em 3em;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border: 0;
-  background: transparent;
-  color: #e55743;
-  text-transform: uppercase;
-  letter-spacing: .25em;
-  outline: none;
-  cursor: pointer;
-  font-weight: bold;
-  border-radius: 0;
-  -webkit-box-shadow: inset 0 0 0 var(--border-size) currentcolor;
-          box-shadow: inset 0 0 0 var(--border-size) currentcolor;
-  -webkit-transition: background .8s ease;
-  transition: background .8s ease;
-}
-
-.button:hover {
-  background: rgba(100, 0, 0, 0.03);
-}
-
-.button__horizontal, .button__vertical {
-  position: absolute;
-  top: var(--horizontal-offset, 0);
-  right: var(--vertical-offset, 0);
-  bottom: var(--horizontal-offset, 0);
-  left: var(--vertical-offset, 0);
-  -webkit-transition: -webkit-transform .8s ease;
-  transition: -webkit-transform .8s ease;
-  transition: transform .8s ease;
-  transition: transform .8s ease, -webkit-transform .8s ease;
-  will-change: transform;
-}
-
-.button__horizontal::before, .button__vertical::before {
-  content: '';
-  position: absolute;
-  border: inherit;
-}
-
-.button__horizontal {
-  --vertical-offset: calc(var(--offset) * -1);
-  border-top: var(--border-size) solid currentcolor;
-  border-bottom: var(--border-size) solid currentcolor;
-}
-
-.button__horizontal::before {
-  top: calc(var(--vertical-offset) - var(--border-size));
-  bottom: calc(var(--vertical-offset) - var(--border-size));
-  left: calc(var(--vertical-offset) * -1);
-  right: calc(var(--vertical-offset) * -1);
-}
-
-.button:hover .button__horizontal {
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-}
-
-.button__vertical {
-  --horizontal-offset: calc(var(--offset) * -1);
-  border-left: var(--border-size) solid currentcolor;
-  border-right: var(--border-size) solid currentcolor;
-}
-
-.button__vertical::before {
-  top: calc(var(--horizontal-offset) * -1);
-  bottom: calc(var(--horizontal-offset) * -1);
-  left: calc(var(--horizontal-offset) - var(--border-size));
-  right: calc(var(--horizontal-offset) - var(--border-size));
-}
-
-.button:hover .button__vertical {
-  -webkit-transform: scaleY(0);
-          transform: scaleY(0);
 }
 /*# sourceMappingURL=styles.css.map */
