--- a/mywebsite/styles/styles.css
+++ b/mywebsite/styles/styles.css
@@ -45,13 +45,16 @@ body {
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: white;
-  display: inline;
+  display: inline-block;
 }
 
 .emphasise:hover {
+  display: flexx;
   color: #F08FC0;
-  -webkit-transform: translateX(3px);
-          transform: translateX(3px);
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
+  -webkit-animation: tada 1s;
+          animation: tada 1s;
 }
 
 @-webkit-keyframes color-change-5x {
@@ -329,6 +332,12 @@ body {
 .navbar--item {
   color: #DBE2EF;
   position: relative;
+  display: inline-block;
+}
+
+.navbar--item:hover {
+  -webkit-animation: headShake 0.5s;
+          animation: headShake 0.5s;
 }
 
 .section-1 {
@@ -348,6 +357,15 @@ body {
   font-size: 1.75rem;
   -webkit-animation: color-change-5x 15s infinite;
           animation: color-change-5x 15s infinite;
+}
+
+.section-1-cat {
+  display: inline-block;
+}
+
+.section-1-cat:hover {
+  -webkit-animation: flash 2s;
+          animation: flash 2s;
 }
 
 .section-2 {
@@ -395,6 +413,20 @@ body {
   font-size: 1.2rem;
   height: 100vh;
   color: #DBE2EF;
+}
+
+.section-3-paragraph {
+  text-align: center;
+}
+
+.section-3__heading {
+  color: white;
+  text-align: center;
+}
+
+.section-3__heading:hover {
+  -webkit-animation: rubberBand 2s;
+          animation: rubberBand 2s;
 }
 
 .section-3 em {
@@ -461,6 +493,17 @@ body {
   font-weight: 400;
 }
 
+.project-image {
+  display: inline-block;
+  -webkit-box-shadow: -1px 5px 5px rgba(0, 0, 0, 0.7);
+          box-shadow: -1px 5px 5px rgba(0, 0, 0, 0.7);
+}
+
+.project-image:hover {
+  -webkit-animation: tada 1s;
+          animation: tada 1s;
+}
+
 .project-description {
   padding: 1rem;
   font-weight: 400;
@@ -522,10 +565,14 @@ body {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
+.ms-header__title:hover {
+  -webkit-animation: tada 1s;
+          animation: tada 1s;
+}
+
 .ms-slider {
   display: inline-block;
-  height: 1.5em;
-  overflow: hidden;
+  height: 4em;
   vertical-align: middle;
   -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(white), color-stop(white), color-stop(white), to(transparent));
   -webkit-mask-image: linear-gradient(transparent, white, white, white, transparent);
@@ -536,7 +583,6 @@ body {
 }
 
 .ms-slider__words {
-  display: inline-block;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -552,7 +598,7 @@ body {
 
 .ms-slider__word {
   display: block;
-  line-height: 1.3em;
+  line-height: 1.2em;
   text-align: left;
   font-size: 3rem;
 }
@@ -634,8 +680,8 @@ body {
   height: inherit;
   border: none;
   border-radius: inherit;
-  background: -webkit-gradient(linear, right top, left top, from(#f39ab6), to(#f39af3));
-  background: linear-gradient(to left, #f39ab6, #f39af3);
+  background: -webkit-gradient(linear, right top, left top, from(#41AEA9), to(#A6F6F1));
+  background: linear-gradient(to left, #41AEA9, #A6F6F1);
   opacity: 0;
   -webkit-transition: all 0.45s ease-in-out;
   transition: all 0.45s ease-in-out;
@@ -834,12 +880,15 @@ body {
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   font-size: 1.75rem;
-  -webkit-animation: color-change-5x 15s infinite;
-          animation: color-change-5x 15s infinite;
   font-size: 1.2rem;
+  text-align: center;
   display: block;
   padding: 7rem 5rem;
   color: #DBE2EF;
+  background-color: #dd33bb;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1000 1000'%3E%3Cdefs%3E%3CradialGradient id='a' cx='500' cy='500' r='53.1%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23dd33bb'/%3E%3Cstop offset='1' stop-color='%23404'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='500' cy='500' r='56.1%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23F70' stop-opacity='1'/%3E%3Cstop offset='1' stop-color='%23F70' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1000' height='1000'/%3E%3Cg fill='none' stroke='%23F6B' stroke-width='1' stroke-miterlimit='10' stroke-opacity='0.26'%3E%3Crect x='12.5' y='12.5' width='975' height='975'/%3E%3Crect x='25' y='25' width='950' height='950'/%3E%3Crect x='37.5' y='37.5' width='925' height='925'/%3E%3Crect x='50' y='50' width='900' height='900'/%3E%3Crect x='62.5' y='62.5' width='875' height='875'/%3E%3Crect x='75' y='75' width='850' height='850'/%3E%3Crect x='87.5' y='87.5' width='825' height='825'/%3E%3Crect x='100' y='100' width='800' height='800'/%3E%3Crect x='112.5' y='112.5' width='775' height='775'/%3E%3Crect x='125' y='125' width='750' height='750'/%3E%3Crect x='137.5' y='137.5' width='725' height='725'/%3E%3Crect x='150' y='150' width='700' height='700'/%3E%3Crect x='162.5' y='162.5' width='675' height='675'/%3E%3Crect x='175' y='175' width='650' height='650'/%3E%3Crect x='187.5' y='187.5' width='625' height='625'/%3E%3Crect x='200' y='200' width='600' height='600'/%3E%3Crect x='212.5' y='212.5' width='575' height='575'/%3E%3Crect x='225' y='225' width='550' height='550'/%3E%3Crect x='237.5' y='237.5' width='525' height='525'/%3E%3Crect x='250' y='250' width='500' height='500'/%3E%3Crect x='262.5' y='262.5' width='475' height='475'/%3E%3Crect x='275' y='275' width='450' height='450'/%3E%3Crect x='287.5' y='287.5' width='425' height='425'/%3E%3Crect x='300' y='300' width='400' height='400'/%3E%3Crect x='312.5' y='312.5' width='375' height='375'/%3E%3Crect x='325' y='325' width='350' height='350'/%3E%3Crect x='337.5' y='337.5' width='325' height='325'/%3E%3Crect x='350' y='350' width='300' height='300'/%3E%3Crect x='362.5' y='362.5' width='275' height='275'/%3E%3Crect x='375' y='375' width='250' height='250'/%3E%3Crect x='387.5' y='387.5' width='225' height='225'/%3E%3Crect x='400' y='400' width='200' height='200'/%3E%3Crect x='412.5' y='412.5' width='175' height='175'/%3E%3Crect x='425' y='425' width='150' height='150'/%3E%3Crect x='437.5' y='437.5' width='125' height='125'/%3E%3Crect x='450' y='450' width='100' height='100'/%3E%3Crect x='462.5' y='462.5' width='75' height='75'/%3E%3Crect x='475' y='475' width='50' height='50'/%3E%3Crect x='487.5' y='487.5' width='25' height='25'/%3E%3C/g%3E%3Crect fill-opacity='0.26' fill='url(%23b)' width='1000' height='1000'/%3E %3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .about-me__section-1 {
@@ -853,10 +902,16 @@ body {
 .about-me em {
   color: white;
   font-weight: 800;
+  display: inline-block;
+}
+
+.about-me em:hover {
+  -webkit-animation: jello 1s;
+          animation: jello 1s;
 }
 
 .about-me a {
-  color: pink;
+  color: white;
 }
 
 .recognitions {
